--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 NEXT_PUBLIC_API_URL=http://localhost:3001/api/GET
-# NEXT_PUBLIC_API_URL=https://portfolio-admin-ochre.vercel.app/api/GET
+# NEXT_PUBLIC_API_URL=https://portfolio-client-wheat.vercel.app/api/GET
